force-app/main/default/objects/Expectation__c/Expectation__c.object-meta.xml
<CustomObject>
    <description>Tracks planned movements of moeny</description>
    <label>Expectation</label>
    <nameField>
        <displayFormat>EXP-{00000}</displayFormat>
        <label>Expectation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expectations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>