force-app/main/default/objects/Expectation__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date when the transaction is expected to occur</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>