force-app/main/default/objects/Expectation__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Indicates whether the transaction represents money coming in (CONTRIBUTION) or going out (WITHDRAWL) of the financial product</description>
    <label>Direction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TransactionDirection</valueSetName>
    </valueSet>
</CustomField>