force-app/main/default/objects/Expectation__c/fields/FinancialProduct__c.field-meta.xml
<CustomField>
    <fullName>FinancialProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Financial Product</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Expectations</relationshipLabel>
    <relationshipName>Expectations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>