force-app/main/default/objects/Expectation__c/fields/Fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The fulfilment work that has caused an expected movement of money</description>
    <label>Fulfilment</label>
    <referenceTo>Fulfilment__c</referenceTo>
    <relationshipLabel>Expectations</relationshipLabel>
    <relationshipName>Expectations</relationshipName>
    <type>Lookup</type>
</CustomField>