force-app/main/default/objects/Expectation__c/fields/RegularTransaction__c.field-meta.xml
<CustomField>
    <fullName>RegularTransaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Regular Transaction</label>
    <referenceTo>RegularTransaction__c</referenceTo>
    <relationshipLabel>Expectations</relationshipLabel>
    <relationshipName>Expectations</relationshipName>
    <type>Lookup</type>
</CustomField>