force-app/main/default/objects/Expectation__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Expectations</relationshipLabel>
    <relationshipName>Expectations</relationshipName>
    <type>Lookup</type>
</CustomField>